annoying alignment fixed

--- a/main.css
+++ b/main.css
@@ -30,7 +30,7 @@ body {
 }
 
 #right_top {
-	margin-left: 260px;
+	margin-left: 200px;
 }
 
 #language {
